photoprism/photoprism.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: default
spec:
  selector:
    app: photoprism
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: photoprism-http
    protocol: TCP
    port: 80
    targetPort: photoprism-http
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism-mariadb
  namespace: default
spec:
  selector:
    app: photoprism-mariadb
  type: ClusterIP
  ports:
  - name: mariadb
    protocol: TCP
    port: 3306
    targetPort: mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  photoprism
  namespace: default
  labels:
    app:  photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app:  photoprism
    spec:
      containers:
      - name:  photoprism
        image:  photoprism/photoprism:221103-jammy
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: "4"
            memory: 8Gi
        ports:
        - containerPort: 2342
          name: photoprism-http
        volumeMounts:
        - name: photoprism-storage
          mountPath: /photoprism-storage
        - name: photoprism-nfs
          mountPath: /photoprism
        - name: localtime
          mountPath: /etc/localtime
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: photoprism-http
      volumes:
        - name: photoprism-storage
          persistentVolumeClaim:
            claimName: photoprism-storage
        - name: photoprism-nfs
          nfs:
            path: /mnt/kirito-pool/YoRHa/photoprism
            server: kirito.daleajackson.io
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/US/Pacific
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  photoprism-mariadb
  namespace: default
  labels:
    app:  photoprism-mariadb
spec:
  selector:
    matchLabels:
      app: photoprism-mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app:  photoprism-mariadb
    spec:
      containers:
      - name:  photoprism-mariadb
        image:  mariadb:10.9
        # Seems like the right way to translate this is to put it all into the args array, since
        # "command" is actually an override of "entrypoint" here ("args" is for CMD)
        # TODO: change this. There's probably some stuff I'm missing by not using mariadb's entrypoint
        command: [ "mysqld" ]
        args: 
        - --innodb-buffer-pool-size=512M
        - --transaction-isolation=READ-COMMITTED
        - --character-set-server=utf8mb4 
        - --collation-server=utf8mb4_unicode_ci 
        - --max-connections=512
        - --innodb-rollback-on-timeout=OFF
        - --innodb-lock-wait-timeout=120
        - --user=root
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: "4"
            memory: 8Gi
        ports:
        - containerPort:  3306
          name:  mariadb
        volumeMounts:
        - name: photoprism-mariadb
          mountPath: /var/lib/mysql
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: photoprism-mariadb
          persistentVolumeClaim:
            claimName: photoprism-mariadb
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
